<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="py.com.ideasweb.perseo.ui.activities.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_normal"
            android:textSize="@dimen/spacing_large"
            android:text="Facturacion Movil"/>



        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icon"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"

            />



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginUsuario"
                android:hint="@string/text_user"
                android:lines="1"
                android:textColor="@color/primary_text"

                />

        </android.support.design.widget.TextInputLayout>


        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPwd"
            android:hint="@string/text_pass"
            android:textColor="@color/primary_text"
            android:inputType="textPassword" />


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/loginRecordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:text="@string/text_recordarusuario"
            android:checked="true"
            />

       <!-- <Button
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_acceder"
            android:theme="@style/MiBotonRaised"
            android:id="@+id/loginAcceder"
            android:onClick="logueo"
            />-->

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnSignIn"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_acceder"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_button"
            app:pb_colorComplete="@color/green_complete"
            app:pb_colorError="@color/red_error"
            app:pb_colorNormal="@color/colorPrimary"
            app:pb_colorPressed="@color/colorPrimaryDark"
            app:pb_colorProgress="@color/colorAccent"
            app:pb_textComplete="Login Correcto"
            app:pb_textError="Credenciales inválidas"
            android:onClick="logueo"
            app:pb_textProgress="Accediendo..." />

        


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/spacing_small"
            android:text="@string/version"/>

        <TextView
            android:id="@+id/version"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>
